Update approved GrantCreatorRequest mailer #207

--- a/app/views/grant_creator_request_review_mailer/approved.html.haml
+++ b/app/views/grant_creator_request_review_mailer/approved.html.haml
@@ -5,9 +5,14 @@
   You request for Grant Creator rights has been approved.
 
 %p
-  Visit the
-  = link_to 'Competitions web site', root_url
-  to add a new grant competition.
+  After you log in, you can create a new Grant by visiting:<br/>
+  = link_to "#{profile_grants_url}", profile_grants_url
+
+%p
+  If you have any questions or would like to request a demo, please reply to this email.
+
+%p
+  Happy grantmaking!
 
 %p
   Thank you.
