--- a/app/views/grant_creator_request_review_mailer/approved.txt.erb
+++ b/app/views/grant_creator_request_review_mailer/approved.txt.erb
@@ -2,6 +2,9 @@ Dear <%= full_name(@requester) %>,
 
 You request for Grant Creator rights has been approved.
 
-Visit the <%= link_to 'Competitions web site', root_url %> to add a new grant competition.
+After you log in, you can create a new Grant by visiting:
+<%= link_to '#{profile_grants_url}', profile_grants_url %>
 
-Thank you.
+If you have any questions or would like to request a demo, please reply to this email.
+
+Happy grantmaking!
