--- a/app/views/grant_permissions/new.html.haml
+++ b/app/views/grant_permissions/new.html.haml
@@ -1,13 +1,18 @@
 - content_for(:page_title, "Add User Permissions for #{@grant.name}")
 
+%h1
+  = @grant.name
+
+= render 'shared/grant_state', { grant: @grant }
+
 = render 'shared/grant_edit_tabbed_menu', { grant: @grant }
+
 .tabs-panel.is-active
   %h2
     = yield(:page_title)
 
   %p
-    - unless @current_user_role == 'viewer'
-      = link_to 'Back to Permissions', grant_grant_permissions_path
+    = link_to 'Back to Permissions', grant_grant_permissions_path
 
 .grid-x
   .cell
