--- a/app/views/grant_submissions/forms/_form.html.erb
+++ b/app/views/grant_submissions/forms/_form.html.erb
@@ -1,3 +1,6 @@
+<%- current_user_may_edit = policy(@grant).update? %>
+<%- disable_fields = !(@form.available? && current_user_may_edit) %>
+
 <script>
   $(function(){Grant.FormBuilderSurvey.init();});
 </script>
@@ -6,16 +9,13 @@
   <%= hidden_field_tag :form_update_fields_url, update_fields_grant_form_url(@grant, @form), id: 'survey_update_fields_url' %>
 <% end %>
 
-<% has_edit_permission = policy(@grant).update? %>
 <%= grant_form_for([@grant, @form], url: grant_form_path) do |f| %>
   <table class="table">
     <tr>
       <td><%= f.label :submission_instructions %></td>
       <td>
-          <%= text_area_tag 'grant_submission_form[submission_instructions]', f.object.submission_instructions, rows: 2, cols: 80, aria: { 'described-by': 'submissionInstructionsHelp' } %>
-          <p id="#submissionInstructionsHelp" class="help-text">
-              This optional text will be included on the application form.
-            </p>
+          <%= text_area_tag 'grant_submission_form[submission_instructions]', f.object.submission_instructions, disabled: disable_fields, rows: 2, cols: 80, aria: { 'described-by': 'submissionInstructionsHelp' } %>
+          <p id="#submissionInstructionsHelp" class="help-text">This optional text will be included on the application form.</p>
       </td>
   </table>
 
@@ -23,16 +23,14 @@
 
   <%= render 'title_placeholder_field' %>
 
-  <%#= f.fields_for :sections, @form.sections.sort_by {|section| section.display_order || 0 } do |ff| %>
   <%= f.fields_for :sections, @form.sections do |ff| %>
-    <%= render partial: 'section_form', locals: { section: ff, has_edit_permission: has_edit_permission} %>
-    <% end %>
+    <%= render partial: 'section_form', locals: { section: ff, has_edit_permission: current_user_may_edit} %>
+  <% end %>
 
-    <% if has_edit_permission %>
-      <%= f.link_to_add 'Add a Section', :sections, class: 'button btn-pill small' %>
-      <div class="actions">
-        <hr/>
-        <%= f.submit 'Save', class: 'button' %>
-      </div>
+  <% if current_user_may_edit %>
+    <%= f.link_to_add 'Add a Section', :sections, class: 'button btn-pill small' %>
+    <div class="actions"><hr/>
+      <%= f.submit 'Save', class: 'button' unless disable_fields %>
+    </div>
   <% end %>
 <% end %>
