--- a/app/views/grant_submissions/forms/edit.html.haml
+++ b/app/views/grant_submissions/forms/edit.html.haml
@@ -1,5 +1,10 @@
 - content_for(:page_title, "Edit - #{@grant.name}")
 
+%h1
+  = @grant.name
+
+= render 'shared/grant_state', { grant: @grant }
+
 = render 'shared/grant_edit_tabbed_menu', { grant: @grant }
 
 .tabs-panel.is-active
