--- a/app/views/grants/edit.html.haml
+++ b/app/views/grants/edit.html.haml
@@ -1,9 +1,16 @@
 - content_for(:page_title, "Edit - #{@grant.name}")
+- disable_fields = !policy(@grant).update?
+
+%h1
+  = @grant.name
+
+= render 'shared/grant_state', { grant: @grant }
 
 = render 'shared/grant_edit_tabbed_menu', { grant: @grant }
+
 .tabs-panel.is-active
   = form_with model: @grant, local: true, id: 'grant-edit' do |f|
-    = render 'form', f: f, grant: @grant
+    = render 'form', f: f, grant: @grant, disable_fields: disable_fields
 
 
 = link_to 'Show', @grant, id: "grant-#{@grant.id}"
