--- a/app/views/grants/new.html.haml
+++ b/app/views/grants/new.html.haml
@@ -3,6 +3,6 @@
 %h1 Create a New Grant
 
 = form_with model: @grant, local: true do |f|
-  = render 'form', f: f, grant: @grant
+  = render 'form', f: f, grant: @grant, disable_fields: false
 
 = link_to 'Back', grants_path
