--- a/app/views/shared/_grant_edit_tabbed_menu.html.haml
+++ b/app/views/shared/_grant_edit_tabbed_menu.html.haml
@@ -1,22 +1,6 @@
-%h1
-  = grant.name
-
-#grant-state
-  %strong
-    Current Publish Status:
-  = grant.state.capitalize
-  = render 'grants/state/form', { grant: grant } unless @current_user_role == 'viewer'
 
 %ul.tabs#grant-info{ class: "grant-edit grant-#{grant.id}-edit" }
-  - {'View' => grant_path(grant),                                          |
-     'Edit' => edit_grant_path(grant),                                     |
-     'Submission Form' => edit_grant_form_path(grant, grant.form),         |
-     'Review Criteria' => criteria_grant_path(grant),                      |
-     'Submissions' => grant_submissions_path(grant),                       |
-     'Reviewers' => grant_reviewers_path(grant),                           |
-     'Reviews' => grant_reviews_path(grant),                               |
-     'Permissions' => grant_grant_permissions_path(grant),                 |
-     'Duplicate' => new_grant_duplicate_path(grant)  }.each do |tab, path|
+  - populate_grant_tabs(grant_permission_role: current_user.grant_permission_role, grant: grant).each do |tab, path|
     %li.tabs-title{ class: [request.path == path && 'is-active'] }
       = link_to tab, path
 
