Specs for request approval/rejection mailers #300

--- a/app/views/grant_creator_requests/edit.html.haml
+++ b/app/views/grant_creator_requests/edit.html.haml
@@ -16,4 +16,4 @@
   - elsif current_user.system_admin?
     .grid-x
       .cell.small-12
-        = link_to 'Review This Grant', grant_creator_request_review_path(@grant_creator_request), class: 'button'
+        = link_to 'Review This Grant Creation Access Request', grant_creator_request_review_path(@grant_creator_request), class: 'button'
