Ensure proper context for get_role_by_grant #299

--- a/app/views/grant_permissions/_grant_edit_list.html.haml
+++ b/app/views/grant_permissions/_grant_edit_list.html.haml
@@ -26,4 +26,4 @@
           %td
             = grant_permission.role
           %td
-            = render partial: "grant_permissions/#{current_user.grant_permission_role}_links", locals: { grant_permission: grant_permission, grant: @grant }
+            = render partial: "grant_permissions/#{current_user.get_role_by_grant(grant: @grant)}_links", locals: { grant_permission: grant_permission, grant: @grant }
