--- a/app/views/grants/_sortable_table.html.haml
+++ b/app/views/grants/_sortable_table.html.haml
@@ -12,7 +12,6 @@
       %th
         = sort_link(q, :submission_close_date)
       %th
-      %th
 
   %tbody
     - grants.each do |grant|
@@ -22,5 +21,8 @@
         %td= grant.publish_date
         %td= grant.submission_open_date
         %td= grant.submission_close_date
-        %td= link_to 'Edit', edit_grant_path(grant) if policy(grant).edit?
-        %td= link_to 'Delete', grant, method: :delete, data: { confirm: 'Are you sure?' } if policy(grant).destroy? && grant_can_be_deleted?(grant)
+        %td
+          %ul.menu
+            %li= link_to 'Edit', edit_grant_path(grant) if policy(grant).edit?
+            %li= link_to 'Delete', grant, method: :delete, data: { confirm: 'Are you sure?' } if policy(grant).destroy? && grant_can_be_deleted?(grant)
+            %li= link_to 'Duplicate', new_grant_duplicate_path(grant) if policy(grant).duplicate?
