--- a/app/views/grant_submissions/submissions/_date_optional_time_picker.html.erb
+++ b/app/views/grant_submissions/submissions/_date_optional_time_picker.html.erb
@@ -1,5 +1,6 @@
 <div data-date_optional_time_picker>
-  <%= f.text_field dt_input, options.merge( { value: value, id: css_id } ) %>
+  <%= f.text_field(attribute: dt_input,
+                   options: options.merge( { value: value, id: css_id } ) ) %>
   <script>
     $(function() {
       $("#<%= "#{css_id}" %>").fdatepicker({
@@ -9,5 +10,4 @@
       });
     });
   </script>
-
 </div>
