--- a/app/views/grant_submissions/submissions/_section_fields.html.erb
+++ b/app/views/grant_submissions/submissions/_section_fields.html.erb
@@ -19,23 +19,26 @@
             <% if ff.object.submission == f.object %>
                 <% case ff.object.question.response_type.to_sym
                    when :pick_one %>
-                    <%= ff.select ffn, options_for_select(ff.object.question.multiple_choice_options.sort_by(&:display_order).map { |option| [option.text, option.id, 'data-value' => option.text] }, ff.object.grant_submission_multiple_choice_option_id), { include_blank: true }, data: { question_id: ff.object.question.id } %>
+                    <%= ff.select(method: ffn,
+                                  choices: options_for_select(ff.object.question.multiple_choice_options.sort_by(&:display_order).map { |option| [option.text, option.id, 'data-value' => option.text] }, ff.object.grant_submission_multiple_choice_option_id),
+                                  options: { include_blank: true },
+                                  html_options: { data: { question_id: ff.object.question.id } }) %>
                 <% when :number %>
-                    <%= ff.text_field ffn, data: { question_id: ff.object.question.id } %>
+                    <%= ff.text_field(attribute: ffn,
+                                      options: { data: { question_id: ff.object.question.id }}) %>
                 <% when :short_text %>
-                    <%= ff.text_area ffn, rows: 1, cols: 30, data: { question_id: ff.object.question.id } %>
+                    <%= ff.text_area(attribute: ffn,
+                                     options: { rows: 1, cols: 30, data: { question_id: ff.object.question.id } }) %>
                 <% when :long_text %>
-                    <%= ff.text_area ffn, rows: 5, cols: 31, required: ff.object.question.is_mandatory, data: { question_id: ff.object.question.id } %>
+                    <%= ff.text_area(attribute: ffn,
+                                     options: { rows: 5, cols: 31, required: ff.object.question.is_mandatory, data: { question_id: ff.object.question.id } }) %>
                 <% when :date_opt_time %>
                     <%= ff.date_opt_time_field :datetime_val, :boolean_val, data: { question_id: ff.object.question.id } %>
                 <% when :file_upload %>
-                    <%= ff.file_upload_field(
-                          has_saved_file: (ff.object.document && ff.object.document.attached?),
-                          file_field: ffn,
-                          remove_document: :remove_document,
-                          document: ff.object.document
-                        )
-                    %>
+                    <%= ff.file_upload_field(has_saved_file: (ff.object.document && ff.object.document.attached?),
+                                             file_field: ffn,
+                                             remove_document: :remove_document,
+                                             document: ff.object.document) %>
                 <% end %>
             <% else %>
                 <%= ff.object.formatted_response_value %>
