Disable input on submission form for viewers #309

--- a/app/views/grant_submissions/forms/_form.html.erb
+++ b/app/views/grant_submissions/forms/_form.html.erb
@@ -19,7 +19,7 @@
   <table class="unstriped">
     <tr>
       <td>
-        <%= f.label :submission_instructions, class: 'bold' %>
+        <%= f.label :submission_instructions, class: 'bold', disable: disable_fields %>
       </td>
     </tr>
     <tr>
