--- a/app/views/grants/criteria/index.html.haml
+++ b/app/views/grants/criteria/index.html.haml
@@ -1,6 +1,8 @@
 - content_for(:page_title, "Edit Review Criteria")
 
-- disable_fields = !policy(@grant).edit?
+- disable_fields = !policy(@grant).grant_editor_access?
+
+= policy(@grant).edit?
 
 %h1
   = @grant.name
@@ -15,6 +17,7 @@
     .cell
       = f.fields_for :criteria, @criteria do |criterion|
         = render partial:'criterion_fields', locals: { f: criterion }
-      .links
-        = link_to_add_association 'Add a New Review Criteria', f, :criteria, class: 'button hollow small warning' unless disable_fields
-    = f.submit 'Save Changes', class: 'button' unless disable_fields
+      - if disable_fields != true
+        .links
+          = link_to_add_association 'Add a New Review Criteria', f, :criteria, class: 'button hollow small warning'
+        = f.submit 'Save Changes', class: 'button'
