Disable form fields for viewers #309

--- a/app/views/grant_submissions/forms/_form.html.erb
+++ b/app/views/grant_submissions/forms/_form.html.erb
@@ -48,3 +48,10 @@
     </div>
   <% end %>
 <% end %>
+<% if disable_fields %>
+  <script>
+    document.addEventListener("trix-initialize", function(event) {
+      event.target.contentEditable = false;
+    });
+  </script>
+<% end %>
