--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,13 +1,14 @@
 = render 'banners/public_banner' if visible_banners.any?
 .grid-x.align-center-middle
-  .small-10.cell#section-intro
+  .small-12.cell#section-intro
     %h4.text-center
       Competitions is a platform to run NIH-style grant competitions including pilot projects and research awards.
 %hr.small-11
 .grid-x.align-center-middle
-  .section-intro
-    %h3.subheader.text-align-center
-      Current Grants
+  .small-12.text-center
+    .section-intro
+      %h3.subheader.text-align-center
+        Current Grants
 .grid-x.grid-padding-x.small-up-1.medium-up-2.large-up-3#public-grants
   - if @grants.present?
     - @grants.each do |grant|
