Add paragraph formatting to long responses. #347

--- a/app/views/grant_submissions/responses/_long_text_response.html.haml
+++ b/app/views/grant_submissions/responses/_long_text_response.html.haml
@@ -1,5 +1,5 @@
 - if response.text_val.present?
-  = response.text_val
+  = simple_format(response.text_val
 - else
   .no-response
     No response
