--- a/app/views/grant_submissions/submissions/reviews/_overall_impact.html.haml
+++ b/app/views/grant_submissions/submissions/reviews/_overall_impact.html.haml
@@ -6,7 +6,7 @@
       = f.label :overall_impact_score, class: 'required-true'
     .cell.small-12.medium-9
       %div.form-error{ data: {form: {error: {for: 'overall-1'}}} }
-        * Overall Impact score is required
+        * Overall Impact Score is required
       .button-group
         %label.scoring-guidance
           Exceptional
