--- a/app/views/grants/reviews/index.html.haml
+++ b/app/views/grants/reviews/index.html.haml
@@ -33,6 +33,7 @@
       - if @reviews.empty?
         %p
           There were no assigned reviews found.
+
       - else
         = render 'shared/pagy_header', locals: { pagy: @pagy }
 
@@ -54,13 +55,17 @@
           %tbody
             - @reviews.each do |review|
               %tr
-                %td= sortable_full_name(review.submission.applicant)
-                %td= link_to truncate(review.submission.title), grant_submission_path(review.grant, review.submission)
+                %td
+                  = sortable_full_name(review.submission.applicant)
+                %td
+                  = link_to truncate(review.submission.title), grant_submission_path(review.grant, review.submission)
                 %td
                   = sortable_full_name(review.reviewer)
                 %td
-                  = review.is_complete? ? link_to('Full Review', grant_submission_review_path(review.grant, review.submission, review)) : 'Incomplete'
-                %td= (review.overall_impact_score || 0)
-                %td= review.composite_score
+                  = link_to (review.is_complete? ? 'Full Review' : 'Incomplete'), grant_submission_review_path(review.grant, review.submission, review)
+                %td
+                  = (review.overall_impact_score || 0)
+                %td
+                  = review.composite_score
 
         != pagy_foundation_nav(@pagy)
