--- a/app/views/grant_submissions/submissions/_section_fields.html.erb
+++ b/app/views/grant_submissions/submissions/_section_fields.html.erb
@@ -31,7 +31,7 @@
                                      options: { rows: 1, cols: 30, data: { question_id: ff.object.question.id } }) %>
                 <% when :long_text %>
                     <%= ff.text_area(attribute: ffn,
-                                     options: { rows: 5, cols: 31, required: ff.object.question.is_mandatory, data: { question_id: ff.object.question.id } }) %>
+                                     options: { rows: 5, cols: 31, data: { question_id: ff.object.question.id } }) %>
                 <% when :date_opt_time %>
                     <%= ff.date_opt_time_field :datetime_val, :boolean_val, data: { question_id: ff.object.question.id } %>
                 <% when :file_upload %>
