Changes from the PR comments. #248

--- a/app/views/grant_submissions/submissions/_form.html.haml
+++ b/app/views/grant_submissions/submissions/_form.html.haml
@@ -15,11 +15,17 @@
   .cell.small-12
   .actions
     - if @submission.submitted?
-      = f.submit 'Save as Draft', class: 'secondary button', disabled: true
-      = f.submit 'Submit', class: 'success button', disabled: true
+      = f.button 'Save as Draft', type: 'submit', name: 'state', value: GrantSubmission::Submission::SUBMISSION_STATES[:draft], data: { disable_with: "Please wait..." }, class: 'secondary button'
+      = f.button 'Submit', type: 'submit', name: 'state', value: GrantSubmission::Submission::SUBMISSION_STATES[:submitted], data: { disable_with: "Please wait..." }, class: 'success button'
+
+      / = f.submit 'Save as Draft', class: 'secondary button', disabled: true
+      / = f.submit 'Submit', class: 'success button', disabled: true
     - else
-      = f.submit 'Save as Draft', data: { disable_with: "Please wait..." }, class: 'secondary button'
-      = f.submit 'Submit', data: { disable_with: "Please wait..." }, class: 'success button'
+      = f.button 'Save as Draft', type: 'submit', name: 'state', value: GrantSubmission::Submission::SUBMISSION_STATES[:draft], data: { disable_with: "Please wait..." }, class: 'secondary button'
+      = f.button 'Submit', type: 'submit', name: 'state', value: GrantSubmission::Submission::SUBMISSION_STATES[:submitted], data: { disable_with: "Please wait..." }, class: 'success button'
+
+      / = f.submit 'Save as Draft', data: { disable_with: "Please wait..." }, class: 'secondary button'
+      / = f.submit 'Submit', data: { disable_with: "Please wait..." }, class: 'success button'
     = link_to 'Cancel', @grant, class: 'button secondary clear'
 :javascript
   $(function () {
