--- a/app/views/profiles/submissions/index.html.haml
+++ b/app/views/profiles/submissions/index.html.haml
@@ -29,7 +29,7 @@
         %th
           = sort_link(@q, :grant_name, 'Grant')
         %th
-          = sort_link(@q, :title, 'Status')
+          = sort_link(@q, :state, 'State')
         %th
           = sort_link(@q, :created_at, 'Submitted On')
         %th
