--- a/app/views/grant_submissions/submissions/index.html.haml
+++ b/app/views/grant_submissions/submissions/index.html.haml
@@ -26,7 +26,7 @@
           %th
             = sort_link(@q, :title, 'Title')
           %th
-            = sort_link(@q, :title, 'Status')
+            = sort_link(@q, :state, 'State')
           %th
             = sort_link(@q, :created_at, 'Submitted On')
           %th
