--- a/app/views/grant_submissions/submissions/_file_upload_field.html.erb
+++ b/app/views/grant_submissions/submissions/_file_upload_field.html.erb
@@ -4,7 +4,7 @@
     <%= link_to f.object.document.filename.to_s, rails_blob_path(document, disposition: "attachment"), {:'data-form_builder_upload_file_link' => ''} %>
   <% end %>
 
-  <%= f.file_field :document, disabled: disabled, accept: allowed_file_extensions, class: 'document_file_input' %>
+  <%= f.file_field :document, disabled: disabled, required: required, accept: allowed_file_extensions, class: 'document_file_input' %>
   <%- if !disabled && has_saved_file %>
       <a data-form_builder_upload_clear style="font-size: 80%" class="button tiny btn-pill warning" href="#">Clear</a>
     <%= f.hidden_field remove_document, {:'data-form_builder_remove_document' => ''} %>
